# cpg-demo

./: .env.example  Instructions.txt  README.md  app.py  debug.py  inspect_chroma.py  main.py  pyproject.toml  setup.py  test.py
agent/: graph.py  nodes.py  state.py
data/: data.json  llm_chunks.json
evaluation/: eval.py
ingestion/: chromadb.py  llm_chunker.py
retrieval/: query.py
